--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ Eel==0.12.4
 entrypoint2==0.2.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
 future==0.18.2
 gevent==20.6.2
 gevent-websocket==0.10.1
@@ -112,6 +113,7 @@ screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
 simplejson==3.13.2
 six==1.14.0
+SQLAlchemy==1.3.19
 sqlparse==0.3.1
 srsly==1.0.2
 system-service==0.3
